Spacing fixes (#118)

--- a/src/styles/view.scss
+++ b/src/styles/view.scss
@@ -17,3 +17,8 @@ mark {
   font-weight: bold;
   background-color: transparent;
 }
+
+.nsw-breadcrumbs {
+  margin-top: initial;
+  @extend .nsw-p-y-sm;
+}
